--- a/Assignment1/A1About.html
+++ b/Assignment1/A1About.html
@@ -22,7 +22,7 @@
     </header>
     <div id="George">
       <h3>About George DiMaggio</h3>
-      <img src="images/George.jpg" alt="George"/>
+      <img src="Images/George.jpg" alt="George"/>
     </div>
     <div id="content">
       <p>I was born to a musical family. My father was a leader of a folk band and my mother taught piano. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
