--- a/Assignment1/index.html
+++ b/Assignment1/index.html
@@ -21,7 +21,7 @@
          <h3>All styles: Pop/Rock, Blues, Latin, Jazz and More!</h3>
     </header>
   <div id="Content">
-    <div id="Guitar"><img src="images/Black guitar.jpg" alt="BlackGuitar"/></div>
+    <div id="Guitar"><img src="Images/Black guitar.jpg" alt="BlackGuitar"/></div>
     <div class="row">
     <div id="about" class="col-3"><h3>About me</h3>    
     <p>I have been teaching guitar for over 20 years to students of all ages and backgrounds. Lorem ipsum dolor sit amet, con sectetur adipis cing elit. Maecenas pharetra, neque in sagittis varius, leo metus hendrerit sapien, non iaculis Read more</p>
