--- a/DELAPAU/DeLaPau.html
+++ b/DELAPAU/DeLaPau.html
@@ -129,18 +129,16 @@
                             <li>Full access</li>
                             <li>Free parking</li>
                             <li>something</li>
-                        </ul>
+                        </ul>  
                     </div>
             </div>
             <div class="travel">
                 <h2>TRAVEL</h2>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d95777.5288161638!2d2.0787275228122817!3d41.39476881434326!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a49816718e30e5%3A0x44b0fb3d4f47660a!2sBarcelona%2C+Spain!5e0!3m2!1sen!2sus!4v1490764485827" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                <img class="Map" src="img/Map.png" alt="Map">
             <ul class="directions">
                 <li><img src="img/airplain_logo.png" alt="plane"> 30 minutes on train from international Barcelona airport</li>
-                <br>
-                <li><img src="img/car_logo.png" alt="car"> 20 minutes drive from Barcelona</li>
-                <br>
-                <li><img src="img/walking_logo.png" alt="person"> 2 years walk from China</li>
+                <li><img src="img/car_logo.png" alt="car"> 20 minute drive from Barcelona city center</li>
+                <li><img src="img/walking_logo.png" alt="person"> 15 minute walk from Sant Andria de Besos station</li>
             </ul>
             </div>
         <footer>
