--- a/bootstrap-3.3.7-dist/History.html
+++ b/bootstrap-3.3.7-dist/History.html
@@ -100,7 +100,7 @@
           <a href="#"><span class="glyphicon glyphicon-thumbs-up"></span></a>
           <a href="#"><span class="glyphicon glyphicon-thumbs-down"></span></a>
           <a href="#"><span class="glyphicon glyphicon-comment"></span></a>
-          <h2 class="featurette-heading">American Museum Of <span class="text-muted">Natural History</span></h2>
+          <h2 class="featurette-heading">American Museum Of <span class="text-muted">Natural History</span></h2> <p><span class="label label-primary">$22</span></p>
           <p class="lead">The American Museum of Natural History is a New York icon. Packed with exhibitions representing people and animals throughout the ages, the museum also has a planetarium and an IMAX theater, as well as special visiting exhibitions and plenty of places to eat and shop. </p>
             
             <p><a class="btn btn-lg btn-primary" href="https://www.google.com/maps/place/American+Museum+of+Natural+History/@40.7813241,-73.9761769,17z/data=!3m1!4b1!4m5!3m4!1s0x89c258f4b00f7a09:0xa27d8172624c5db1!8m2!3d40.7813241!4d-73.9739882" role="button">Location</a>
@@ -120,7 +120,7 @@
           <a href="#"><span class="glyphicon glyphicon-thumbs-up"></span></a>
           <a href="#"><span class="glyphicon glyphicon-thumbs-down"></span></a>
           <a href="#"><span class="glyphicon glyphicon-comment"></span></a>
-          <h2 class="featurette-heading">New York Public Library <span class="text-muted">Stephen A. Schwarzman</span></h2>
+          <h2 class="featurette-heading">New York Public Library <span class="text-muted">Stephen A. Schwarzman</span></h2> <p><span class="label label-primary">FREE</span></p>
           <p class="lead"> The New York Public Library is a public library system in New York City. With nearly 53 million items, the New York Public Library is the second largest public library in the United States, and fourth largest in the world.</p>
             
             <p><a class="btn btn-lg btn-primary" href="https://www.google.com/maps/place/New+York+Public+Library+-+Stephen+A.+Schwarzman+Building/@40.7531823,-73.9844421,17z/data=!3m2!4b1!5s0x89c259006f811e69:0xdf9c5a032104b840!4m5!3m4!1s0x89c2590099a8a8a9:0x3b51df6e509a734c!8m2!3d40.7531823!4d-73.9822534" role="button">Location</a>
