--- a/bootstrap-3.3.7-dist/Comedyshows.html
+++ b/bootstrap-3.3.7-dist/Comedyshows.html
@@ -100,7 +100,7 @@
           <a href="#"><span class="glyphicon glyphicon-thumbs-up"></span></a>
           <a href="#"><span class="glyphicon glyphicon-thumbs-down"></span></a>
           <a href="#"><span class="glyphicon glyphicon-comment"></span></a>
-          <h2 class="featurette-heading">Stand Up <span class="text-muted">Comedy</span></h2>
+          <h2 class="featurette-heading">Stand Up <span class="text-muted">Comedy</span></h2> <p><span class="label label-primary">FREE</span></p>
           <p class="lead">EastVille Comedy Club features some of the funniest and most experienced comedians in the city. In its Friday night performances, you'll be TGIFing to a rotating list of the city's best stand-up comics as they showcase their material.</p>
             
             <p><a class="btn btn-lg btn-primary" href="https://www.google.com/maps/place/EastVille+Comedy+Club/@40.7265449,-73.9920507,17z/data=!4m13!1m7!3m6!1s0x89c25984b353bb31:0x20df7739a37b367c!2s85+E+4th+St,+New+York,+NY+10003!3b1!8m2!3d40.7265449!4d-73.989862!3m4!1s0x89c25984b353bb31:0xff7b2e0dd730ea71!8m2!3d40.7264757!4d-73.9898792" role="button">Location</a>
@@ -120,7 +120,7 @@
           <a href="#"><span class="glyphicon glyphicon-thumbs-up"></span></a>
           <a href="#"><span class="glyphicon glyphicon-thumbs-down"></span></a>
           <a href="#"><span class="glyphicon glyphicon-comment"></span></a>
-          <h2 class="featurette-heading">Tribeca Comedy <span class="text-muted">Lounge</span></h2>
+          <h2 class="featurette-heading">Tribeca Comedy <span class="text-muted">Lounge</span></h2> <p><span class="label label-primary">$4</span></p>
           <p class="lead"> New York's Tribeca Comedy Lounge has combined both to create an outstanding experience. At most comedy clubs, food is an afterthought at best (and often as laughable as anything you'll hear from the stage), but Tribeca Comedy Lounge is raising the stakes.</p>
             
             <p><a class="btn btn-lg btn-primary" href="https://www.google.com/maps/place/Tribeca+Comedy+Lounge/@40.714323,-74.0099556,17z/data=!4m13!1m7!3m6!1s0x89c25a1f4bb603dd:0x7899d557b7027b5!2s22+Warren+St,+New+York,+NY+10007!3b1!8m2!3d40.714323!4d-74.0077669!3m4!1s0x89c25a1f4b16e1f7:0x21506053bef0645a!8m2!3d40.7143229!4d-74.0077669" role="button">Location</a>
