--- a/bootstrap-3.3.7-dist/index.html
+++ b/bootstrap-3.3.7-dist/index.html
@@ -163,8 +163,8 @@
            </div><!-- /.col-lg-6 -->
            
             <div class="col-lg-4">
-          <img class="img-thumbnail" src="kidspage/animal.png" alt="Attractions" width="400" height="200">
-          <h2>Kids <a class="btn btn-default" href="#" role="button">View &raquo;</a></h2>
+          <img class="img-thumbnail" src="kidspage/animal.png" alt="Kidpage" width="400" height="200">
+          <h2>Kids <a class="btn btn-default" href="Kids.html" role="button">View &raquo;</a></h2>
            </div><!-- /.col-lg-6 -->
         </div><!-- /.row -->
         </div><!-- /.container-fluid -->
