--- a/bootstrap-3.3.7-dist/kids.html
+++ b/bootstrap-3.3.7-dist/kids.html
@@ -69,25 +69,8 @@
                     <li><a href="#">Acrobatics Classes</a></li>
                     </ul>
                   </li>
-                <li><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">ATTRACTIONS<span class="caret">
-                    </span></a>
-                    <ul class="dropdown-menu">
-                     <li><a href="attractions.html"> Main Attractions </a></li>
-                    <li><a href="#">Grand Central Terminal</a></li>
-                    <li><a href="#">New York Botanical Garden</a></li>
-                    <li><a href="#">One World Observatory</a></li>
-                    </li>
-              </ul>
+                <li><a href="#">ATTRACTIONS</a>
                 </li>
-               
-                 <li><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">KIDS<span class="caret">
-                    </span></a>
-                    <ul class="dropdown-menu">
-                              <li><a href="bronxzoo.html">Bronx Zoo</a></li>
-                    <li><a href="#">Aquarium</a></li>
-                    <li><a href="#">Library</a></li>
-                    <li><a href="#">Arts</a></li>
-                    </li>
               </ul>
             <div class=" navbar-form navbar-right col-sm-4">
           <div class="input-group">
