--- a/bootstrap-3.3.7-dist/index.html
+++ b/bootstrap-3.3.7-dist/index.html
@@ -11,6 +11,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
      <!-- Custom styles for this template -->
     <link href="carousel.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Julius+Sans+One" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -164,7 +165,7 @@
            
             <div class="col-lg-4">
           <img class="img-thumbnail" src="kidspage/animal.png" alt="Kidpage" width="400" height="200">
-          <h2>Kids <a class="btn btn-default" href="Kids.html" role="button">View &raquo;</a></h2>
+          <h2>Kids <a class="btn btn-default" href="kids.html" role="button">View &raquo;</a></h2>
            </div><!-- /.col-lg-6 -->
         </div><!-- /.row -->
         </div><!-- /.container-fluid -->
