--- a/bootstrap-3.3.7-dist/index.html
+++ b/bootstrap-3.3.7-dist/index.html
@@ -165,7 +165,7 @@
            
             <div class="col-lg-4">
           <img class="img-thumbnail" src="kidspage/animal.png" alt="Attractions" width="400" height="200">
-          <h2>Kids <a class="btn btn-default" href="#" role="button">View &raquo;</a></h2>
+          <h2>Kids <a class="btn btn-default" href="kids.html" role="button">View &raquo;</a></h2>
            </div><!-- /.col-lg-6 -->
         </div><!-- /.row -->
         </div><!-- /.container-fluid -->
